syntax = "proto3";

package msg;

import "gogo.proto";

option(gogoproto.goproto_getters_all) = false;

// ============================================================================
// msgid range for C <-> GS: [9800, 9900)
// ============================================================================

// import "c_gs.00.structs.proto";

// ============================================================================

message VipData {
    int32 Lv  = 1;
    int32 Exp = 2;
}

// ============================================================================

message GS_VipUpdate { // msgid: 9800
    int32 Lv  = 1;
    int32 Exp = 2;
}

// ============================================================================
